# anki-mcp-elevenlabs

./: Makefile  README.md  main.py  mise.toml  pyproject.toml  requirements.txt  server.py  test_elevenlabs.py  test_media_methods.py  test_media_unit.py  test_tts.py
anki_mcp_elevenlabs/: server.py  server_utils.py  test_debug.py
anki_mcp_elevenlabs/tests/: test_deck_operations.py  test_elevenlabs.py  test_media_methods.py  test_media_unit.py  test_tts.py  test_validation.py
anki_mcp_elevenlabs/tts/: __init__.py  elevenlabs_tts.py  google_tts.py  unified_tts.py
scripts/: install-pre-commit-hook.sh
